force-app/main/default/objects/RFI__c/fields/Assigned_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for Onboarding</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>