force-app/main/default/objects/RFI__c/fields/IE_Owner__c.field-meta.xml
<CustomField>
    <fullName>IE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PF Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>