force-app/main/default/objects/RFI__c/fields/Plant_Asset__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset__c</fullName>
    <label>Plant Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot create an RFI while plant asset is in this Project Lifecycle Status. Change status to appropriate PLS to create RFI</errorMessage>
        <filterItems>
            <field>Plant_Asset__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer Asset</value>
        </filterItems>
        <filterItems>
            <field>Plant_Asset__c.Project_Lifecycle_Status__c</field>
            <operation>notEqual</operation>
            <value>Pending, Customer Validation, Operations, Decommissioned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Asset__c</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>