force-app/main/default/objects/RFI__c/fields/RFI_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Completion_Date__c</fullName>
    <label>RFI Completion Date</label>
    <type>DateTime</type>
</CustomField>