force-app/main/default/objects/RFI__c/fields/RFI_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Status__c</fullName>
    <label>RFI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
                <isActive>false</isActive>
                <label>Cannot Complete</label>
            </value>
            <value>
                <fullName>Completed – Pending PF Review</fullName>
                <isActive>false</isActive>
                <label>Completed – Pending PF Review</label>
            </value>
            <value>
                <fullName>Needs Detail</fullName>
                <isActive>false</isActive>
                <label>Needs Detail</label>
            </value>
            <value>
                <fullName>New – Pending Customer Review (New)</fullName>
                <isActive>false</isActive>
                <label>New – Pending Customer Review (New)</label>
            </value>
            <value>
                <fullName>Submitted – Pending Customer Review</fullName>
                <isActive>false</isActive>
                <label>Submitted – Pending Customer Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>