force-app/main/default/objects/RFI__c/fields/Wrike_RFI_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Wrike_RFI_Name_Number__c</fullName>
    <label>Wrike RFI Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>