force-app/main/default/objects/RFI__c/validationRules/exisiting_RFI_for_plant_asset.validationRule-meta.xml
<ValidationRule>
    <fullName>exisiting_RFI_for_plant_asset</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ,  Plant_Asset__r.Active_RFI__c  &lt;&gt;  0)</errorConditionFormula>
    <errorMessage>There is already an open RFI. Hence you cannot create a new one</errorMessage>
</ValidationRule>