force-app/main/default/objects/RFI__c/validationRules/RFINameChangeRule.validationRule-meta.xml
<ValidationRule>
    <fullName>RFINameChangeRule</fullName>
    <active>true</active>
    <description>RFI name field is not editable</description>
    <errorConditionFormula>(ISCHANGED(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>RFI Name field is not editable</errorMessage>
</ValidationRule>