force-app/main/default/objects/RFI__c/listViews/Closed_RFIs.listView-meta.xml
<ListView>
    <fullName>Closed_RFIs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plant_Asset__c</columns>
    <columns>Assigned_Customer_Contact__c</columns>
    <columns>RFI_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RFI_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed RFIs</label>
</ListView>