force-app/main/default/objects/RFI__c/listViews/Open_RFIs.listView-meta.xml
<ListView>
    <fullName>Open_RFIs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plant_Asset__c</columns>
    <columns>Assigned_Customer_Contact__c</columns>
    <columns>RFI_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RFI_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Logged_in_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PF Open RFIs</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>